--- a/index.html
+++ b/index.html
@@ -2,9 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/fav.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dominicanos Unidos Baltimore</title>
+    <meta
+      name="description"
+      content="Dominicanos Unidos Baltimore unites Dominican families, entrepreneurs, and cultural leaders through community events, business resources, and support services in the greater Baltimore area."
+    />
+    <meta
+      name="keywords"
+      content="Dominicanos Unidos Baltimore, Dominican community, nonprofit, cultural events, business directory, community support, donations"
+    />
+    <meta name="author" content="Dominicanos Unidos Baltimore" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dominicanos Unidos Baltimore" />
+    <meta
+      property="og:description"
+      content="Discover how Dominicanos Unidos Baltimore empowers the Dominican community with cultural programming, business resources, and opportunities to give back."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://dominicanosunidos.org" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dominicanos Unidos Baltimore" />
+    <meta
+      name="twitter:description"
+      content="Support the Dominican community in Baltimore through events, donations, and local business connections."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Dominicanos Unidos Baltimore",
+        "url": "https://dominicanosunidos.org",
+        "logo": "https://dominicanosunidos.org/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/dominicanosunidos",
+          "https://www.instagram.com/dominicanosunidos",
+          "https://www.twitter.com/dominicanosunidos"
+        ],
+        "description": "A non-profit organization dedicated to uniting Dominican businesses and supporting the community in Baltimore through cultural events, resources, and outreach."
+      }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
